--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body>
     <div class="no1-top_images">
-        <img class="top_cloud" src="cloud.png" alt="cloud">
+        <img class="top_cloud" src="/cloud.png" alt="cloud">
         <div class="top_container">
             <h1 class="top_h1"> <span>HELLO, THERE!<br>I'm</span> <br> <span class="name">KUMAR HARSH</span></h1>
             <h3 class="coder">A CODER!</h3>
         </div>
         <div class="image_container">
-            <img class="down_cloud" src="cloud.png" alt="cloud">
-            <img class="mountain" src="mountain.png" alt="mountain">
+            <img class="down_cloud" src="/cloud.png" alt="cloud">
+            <img class="mountain" src="/mountain.png" alt="mountain">
         </div>
 
     </div>
