Corrected some texts in Web_Dev portion
>corrected some grammer error
>made a line bold
>Learning how to push codes to github

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
             <div class="below_webd">
                 <img class="webdev_png" src="https://cdn-icons-png.flaticon.com/512/1329/1329016.png" alt="web_dev">
                 <h3>Web_Development</h3>
-                <p class="p3">See, we were the batch whose JEE exams had been shifter due to corona. So our session 
-                    started only in NOVEMBER 2022. So to keep the course on track, the 1st semester was wrapped up by 
-                    march 2023 (5 months duration). So after our finals were over, me along with five friends of mine
+                <p class="p3">See, we were the batch whose JEE exams had been shifted due to corona. So our session 
+                    started only in NOVEMBER 2022. Hence to keep the course on track, the 1st semester was wrapped up by 
+                    march 2023 (5 months duration). So after when our finals were over, me along with five friends of mine
                     decided to learn Full stack Web_Development through the 2nd semester. And hence bought this course 
                     by Angela Yu on "The Complete 2023 Web Development Bootcamp". Since then I have tried my level best 
                     to finish the course! But as WebDev requires a lot of practice, and due to other factors like hurried 
-                    up course completition in college (its 26th June 2023 and within 3 months, april-june, our 2nd Sem has also been wrapped up!)
+                    up course completition in college <b>(its 26th June 2023 and within 3 months, april-may-june, our 2nd Sem has also been wrapped up!)</b> 
                     I could not finish the course completely. But whatever I did, I did them very deligently, for sure!
                     So concepts I've learnt are:-
                     <ul>
