attached Dhun's link
Added yet another project of mine. And this time its a music streaming WebApp called Dhun! Its 26th August.

--- a/index.html
+++ b/index.html
@@ -90,25 +90,37 @@
                     </ul>
                     So after learning the, React, my frontend learning journey will be completed, ofcourse, I won't be a pro by then! but I will be through with how a website's frontend works.
                     <br> <br> Thereafter, I am planning to start with Backend, also with DSA, in my summer vacations(only for name-sake! Tentative re-opening date: 1st August 2023) after my End-Term exams conclude on 13th July-2023!
-                    <br> <br> 
+                    <hr>
                     Some New Update!! 
-                    Its 24th August today when I am pushing this updated course! 
+                    Its 24th August today when I am pushing this update! 
                     See, I thought that I mastered JavaScript from Angela Yu. But it was a misunderstanding. And I realized it when I went on to study React. 
                     See, the FUNDAMENTALS what they say is JavaScript Only!!! Upon it only all these FrameWorks are built. And if you are not making your findamentals strong then you are not goanna survive in this coding sector.
                     Hence I started this series on JavaScript called "Chai aur JavaScript" by Hitesh Choudhary! And he's really awesome in teaching inDepth JavaScript.
                     I've completed 36 lectures out of 50 till date, and made 3 more new Projects thus understanding the depth of JavaScript!
-                    <br> <br>
+                    <br>
                     Now I will be completing this series and then will be starting with React once more and also with DSA in C++, keeping the later in more pace!
-                    <br> <br>
-                    So guys, thanks for hearing me out! will meet soon! 😊😄😊
-                    Here are some of the projects of mine which I built as a practice, under Angela Yu's guidances in her course <a class="project" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">"The Complete 2023 Web Development Bootcamp"</a>
-                    They have a link, via GitHub:-
+                    <br>
+                    So guys, thanks for hearing me out! will meet soon! 😊😄😊 
+                    <hr>
+                    Some New Update!! 
+                    Its 26th August today when I am pushing this update!
+                    I have built a music streaming webApp, which I named Dhun!! purely on HTML, CSS and JavaScript.
+                    Many learnings came along way and it was fun.
+                    Now, my college is starting from 28th August! And i also have participated in the team of ERP project in my college. So, let's see how that goes!
+                    Also, need to start DSA asap!
+                    <br>
+                    So guys, thanks for hearing me out! will meet soon! 😊😄😊 
+                    <hr>
+                    Here are some of the WebDev projects of mine which I built as a practice, while learning HTML, CSS and JavaScript!
+                    <br><br>
+                    They have a link, via GitHub Pages:-
                     <ul>
                         <li> <a class="project" href="https://kharsh560.github.io/dicee_game_by_kumar_harsh/">Its a project on Dicee/Toss game 🎲</a> </li>
                         <li> <a class="project" href="https://kharsh560.github.io/Drumkit_by_kumar_harsh.github.io/">Its a project on DrumKit game 🎶</a> </li>
                         <li> <a class="project" href="https://kharsh560.github.io/GuessTheNumberBy_KumarHarsh/">Its a project on Guess The Number 😎</a> </li>
                         <li> <a class="project" href="https://kharsh560.github.io/Color_ChangerAPP_BY_Kumar_Harsh/">Its a project of an app which changes BackGround Color! 🌈</a> </li>
                         <li> <a class="project" href="https://kharsh560.github.io/BMI_calculator_BY_Kumar_Harsh/">Its a project on BMI Calculator 💪🏻</a> </li>
+                        <li> <a class="project" href="https://kharsh560.github.io/dhun_Feel_the_Music_BY_Kumar_Harsh/">Its a project on Music Streaming Webapp called "Dhun-Feel_The_Music!" 🎧</a> </li>
                     </ul>
 
                 </p>
