Made responsive for mobiles
Made the renovated portfolio/about me webpage, responsive for mobiles!!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <a href="#myWork">Portfolio</a>
             <a href="#blogTopic">Blog</a>
             <a href="#contactMeMainContainer">Contact</a>
+            <i class="fa-solid fa-xmark fa-2xl" style="color: #fcfcfd;"></i>
         </div>
+        <i class="fa-solid fa-bars fa-xl show" style="color: #ffffff;"></i>
     </div>
 
     <!--  ########################################################## Second layer, having Intro  ########################################################## -->
@@ -45,6 +47,8 @@
                 <br>
                 a Developer.
             </h1>
+            <!-- <div id="posterForMobiles"></div> -->
+            <img class="posterImgForMobiles" src="imageResources/MyWebPageImg2.png" alt="posterForMobileViewers">
             <p class="p1">I'm currently a 2nd-year Undergrad at MAIT, Delhi, pursuing my Bachelor's degree in CSE-AI&ML.
                 I am very enthusiastic about coding and like to spend time learning new technologies around it.
                 Fundamentally, I love solving problems and am trying to get a good grip on them by solving problems
@@ -387,7 +391,7 @@
             <h2>Get In Touch</h2>
             <p class="p4">If you wish, you can;</p>
             <a class="btn-grad" href="mailto:kharsh560@gmail.com">Send Me a Mail</a>
-            <h3 class="contact">You can follow me on these social media handels present in the footer links!</h3>
+            <h3 class="requestToFollow">You can follow me on these social media handels present in the footer links!</h3>
             <div class="bottom_container">
                 <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/kumar-harsh-468a22253"><i class="fa-brands fa-linkedin fa-2xl" style="color: #a7aaae;"></i></a>
                 <a class="footer-link" target="_blank" href="https://www.instagram.com/kharsh560/"><i class="fa-brands fa-instagram fa-2xl" style="color: #8e8f90;"></i></a>
