added Viewport Meta Tag
This tag helps browsers understand how to scale and display the content on mobile devices.......As per gpt!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <title>Kumar_Harsh</title>
 
+    <!-- Viewport Meta Tag: Ensure that you have the viewport meta tag set correctly in the <head> section
+         of your HTML document. This tag helps browsers understand how to scale and display the content on
+         mobile devices.  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     <!-- Code to attach CSS styling -->
     <link rel="stylesheet" href="styling_for_KH_website.css">
 
