Think I'vs made the webpage responsive!
Think I'vs made the webpage responsive!
Yes!!! :-)

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <!--  ########################################################## Second layer, having Intro  ########################################################## -->
     <div id="intro">
         <div class="aboutMeWriteup">
-            <h1>Hey there, folks!
+            <h1>Greetings!
                 <br>
                 <span class="myName">I'm KUMAR HARSH</span>
                 <br>
-                a Developer.
+                a Software Developer.
             </h1>
             <!-- <div id="posterForMobiles"></div> -->
             <!-- <img class="posterImgForMobiles" src="imageResources/MyWebPageImg2.png" alt="posterForMobileViewers"> -->
