Made some changes here and there
changed the colour red from maroon, and scaled up the about me writeup! Also made some changes in the writing/content part as told by ilu bhaiya!

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         <div class="aboutMeWriteup">
             <h1>Greetings!
                 <br>
-                <span class="myName">I'm KUMAR HARSH</span>
+                <span class="myName">I'm KUMAR HARSH</span>,
                 <br>
                 a Software Developer.
             </h1>
             <!-- <div id="posterForMobiles"></div> -->
             <!-- <img class="posterImgForMobiles" src="imageResources/MyWebPageImg2.png" alt="posterForMobileViewers"> -->
-            <p class="p1">I am currently a second year undergraduate student at MAIT, Delhi, pursuing a Bachelor of
+            <p class="p1">I am currently a second year undergraduate student at Maharaja Agrasen Institute of Technology (MAIT), Delhi, pursuing a Bachelor of
                 Science in Computer Science and Engineering with a specialization in Artificial Intelligence and Machine
-                Learning. <br> My passion lies in the field of coding, where I spend a significant part of my time
+                Learning. <br> <br> My passion lies in the field of coding, where I spend a significant part of my time
                 learning and adopting new technologies. My approach to problem solving is deeply rooted in my love of
                 coding, and I actively improve my skills by solving challenges on platforms like LeetCode and
                 CodeStudio, primarily using the "C/C++" programming language.
@@ -65,9 +65,9 @@
                 current focus on front-end development. I have gained knowledge in HTML, CSS and JavaScript and am
                 currently working on React.js. At the same time, I also embarked on a journey into Data Science, which
                 aligns with my academic pursuits in my B.Tech program.
-                <br>
+                <br> <br>
                 Essentially, I pursue multiple avenues of learning and growth and strive to excel in each through my
-                unwavering commitment and enthusiasm. Your consideration of my journey would be greatly appreciated. 😊
+                unwavering commitment and enthusiasm. Your consideration of my journey would be greatly appreciated.
             </p>
         </div>
         <img src="imageResources/MyWebPageImg3.png" class="myPoster" alt="myPoster">
@@ -91,7 +91,7 @@
         </div>
 
         <div class="aboutMeDetails">
-            <h3>A comprehensive overview of my accomplishments thus far encompasses...</h3>
+            <h3>A comprehensive overview of my accomplishments thus far encompasses:</h3>
             <div class="aboutMeTabs">
                 <p id="skills">Skills</p>
                 <p id="experience">Experience</p>
@@ -110,7 +110,7 @@
                     <p>Web Development</p>
                 </div>
                 <div>
-                    <p>Learning Fullstack Web Development and currently in <br> frontend portion of it doing
+                    <p>Learning Fullstack Web Development and currently in frontend portion of it doing
                         React.js after learning HTML, CSS and JS! </p>
                 </div>
                 <!-- 3 -->
@@ -118,8 +118,7 @@
                     <p>Data Science</p>
                 </div>
                 <div>
-                    <p>Currently I am making a dive into the ocean of Data, by learning Data Science, <br> Machile
-                        Learning and Artificial Intelligence!</p>
+                    <p>Currently, I am learning Data Science to understand how AI and ML can be  leveraged to drive business and strategic decisions.</p>
                 </div>
             </div>
 
@@ -129,23 +128,27 @@
                     <p>Attended a Hackathon</p>
                 </div>
                 <div>
-                    <p>I got a chance to attend the hackathon organised by DTU, called VIHAAN 6.0</p>
+                    <p>=> I got a chance to attend the hackathon organised by DTU, called VIHAAN 6.0 <br>
+                       => Me and my team worked upon the idea of tourism industry, on how to make   
+                        people aware of and increase tourism of the undiscovered places in India, through a 
+                        webApp, where our aim was to give info about such places in blog form!</p>
                 </div>
                 <!-- 5 -->
                 <div class="aboutMeInfoTopic">
-                    <p>Working on ERP project of MAIT, Delhi</p>
+                    <p>Working on ERP project of MAIT, Delhi <br>
+                    </p>
                 </div>
                 <div>
-                    <p>I am a member of the team responsible for making the ERP project of MAIT, Dlehi. <br>
-                        Its under the CSE department of my college!</p>
+                    <p>=> I am a member of the team, working on the ERP project of MAIT, Delhi. <br>
+                        => I am working in the frontend portion in React.js techstack!</p>
                 </div>
                 <!-- 6 -->
                 <div class="aboutMeInfoTopic">
                     <p>Have worked on quite a few Projects</p>
                 </div>
                 <div>
-                    <p>I have worked upon some of the very fundamental projects as a part of learning <br> Web
-                        Development in depth!</p>
+                    <p>I have worked upon some of the very fundamental projects as a part of <br> 
+                        learning Web Development, at which you can have a look on, in the "My Work" section.</p>
                 </div>
             </div>
 
@@ -155,10 +158,10 @@
                     <p>Currently a B.Tech UnderGrad</p>
                 </div>
                 <div>
-                    <p>Pursuing B.Tech in Computer Science and Engineering <br> with specialization in Artificial
-                        Intelligence and Machine Learning! <br>Presently in 2nd-year.</p>
+                    <p>Pursuing B.Tech in Computer Science and Engineering with specialization in Artificial
+                        Intelligence and Machine Learning, presently in 2nd-year.</p>
                 </div>
-                <!-- 8 -->
+                <!-- 8
                 <div class="aboutMeInfoTopic">
                     <p>Prepared for IIT Advanced Exam</p>
                 </div>
@@ -166,13 +169,13 @@
                     <p>Went to Resonance Coaching Institute, Kota, Rajasthan, for the preparation of <br>
                         IIT Advanced Examination along with JEE Exam, ofcourse!</p>
                 </div>
-                <!-- 9 -->
+                9
                 <div class="aboutMeInfoTopic">
                     <p>School</p>
                 </div>
                 <div>
                     <p>Went to Vidya Vihar Residential School, Purnia, Bihar from 7th to 10th Class!</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -266,7 +269,7 @@
         </div>
     </div>
     <div class="centering">
-        <a href="#myWork"><button class="showMoreButton">Show more</button></a>
+        <a href="#myWork"><button class="showMoreButton btn-grad">Show more</button></a>
     </div>
 
     <!--  ########################################################## Portfolio section ends  ########################################################## -->
@@ -348,7 +351,7 @@
                 latter to maintain a swift pace of progress.
                 <br>
                 I would like to express my gratitude to all those who have followed my journey and offered their
-                support. I look forward to sharing further updates with you soon! 😊
+                support. I look forward to sharing further updates with you soon! 
             </p>
         </div>
 
@@ -368,7 +371,7 @@
                 soon as possible, and I plan to prioritize it in the upcoming days.
 
                 I want to express my appreciation to all of you for following my journey and offering your support. I
-                look forward to sharing more updates with you in the near future! 😊😄😊
+                look forward to sharing more updates with you in the near future! 
             </p>
         </div>
 
@@ -393,7 +396,7 @@
                 ability to tackle them successfully.
 
                 I want to express my gratitude to all of you for following my journey and offering your support. I look
-                forward to sharing more updates with you in the near future! 😊😄😊
+                forward to sharing more updates with you in the near future! 
 
 
 
