removed the ERP para
removed the ERP para

--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                         webApp, where our aim was to give info about such places in blog form!</p>
                 </div>
                 <!-- 5 -->
-                <div class="aboutMeInfoTopic">
+                <!-- <div class="aboutMeInfoTopic">
                     <p>Working on ERP project of MAIT, Delhi <br>
                     </p>
                 </div>
                 <div>
                     <p>=> I am a member of the team, working on the ERP project of MAIT, Delhi. <br>
                         => I am working in the frontend portion in React.js techstack!</p>
-                </div>
+                </div> -->
                 <!-- 6 -->
                 <div class="aboutMeInfoTopic">
                     <p>Have worked on quite a few Projects</p>
