Updated many stuffs except Blog section
Updated many stuffs except Blog section.
Updated experience section, portfolio section and added icons of techstacks.
Blog scetion is due now.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                 </div>
                 <div>
                     <p>Learning Fullstack Web Development and currently in frontend portion of it doing
-                        React.js after learning HTML, CSS and JS! </p>
+                        React.Js after learning HTML, CSS and JS! Also have worked upon the backend portion!
+                    See the blog section to know more. </p>
                 </div>
                 <!-- 3 -->
                 <div class="aboutMeInfoTopic">
@@ -125,6 +126,15 @@
             <div class="aboutMeExperience inactiveTab">
                 <!-- 4 -->
                 <div class="aboutMeInfoTopic">
+                    <p>Selected amongst #Top10 teams in NIT Patna's PitchTemberFest.</p>
+                </div>
+                <div>
+                    <p>
+                        => My team managed to secure a position under top 10 teams in NIT Patna's PitchTemberFest
+                        where in we had worked on our platform SyncSphere.
+                    </p>
+                </div>
+                <!-- <div class="aboutMeInfoTopic">
                     <p>Attended a Hackathon</p>
                 </div>
                 <div>
@@ -132,8 +142,20 @@
                        => Me and my team worked upon the idea of tourism industry, on how to make   
                         people aware of and increase tourism of the undiscovered places in India, through a 
                         webApp, where our aim was to give info about such places in blog form!</p>
-                </div>
+                </div> -->
                 <!-- 5 -->
+                <div class="aboutMeInfoTopic">
+                    <p>Our solution got accepted in Google Solution Challenge under GDSC.</p>
+                </div>
+                <div>
+                    <p>
+                        => In the Google Solution Challenge, we elevated our project by integrating Google products like Gemini, enabling
+                        personalized responses for tax benefits based on income. We also received recognition by being shortlisted for the GDSC India regional Bootcamp, where we received personalized
+                        mentorship from Google Developers. <br> <br>
+
+                        => You can see this post of mine on <a id="GDSCpost" href="https://www.linkedin.com/posts/kumar-harsh-468a22253_top10-top100-syncsphere-activity-7185929396371816451-Nwh-?utm_source=share&utm_medium=member_desktop">Linkedin</a> for more info related to these events.
+                    </p>
+                </div>
                 <!-- <div class="aboutMeInfoTopic">
                     <p>Working on ERP project of MAIT, Delhi <br>
                     </p>
@@ -144,7 +166,7 @@
                 </div> -->
                 <!-- 6 -->
                 <div class="aboutMeInfoTopic">
-                    <p>Have worked on quite a few Projects</p>
+                    <p>Have worked on quite a few Projects.</p>
                 </div>
                 <div>
                     <p>I have worked upon some of the very fundamental projects as a part of <br> 
@@ -184,17 +206,77 @@
     <h1 id="myWork">My Work</h1>
     <div class="myPortfolioContainer">
         <div class="work">
+            <img src="./imageResources/passCodeBgImg.jpeg" alt="RandomPasswordGenerator">
+            <div class="layer">
+                <h3>Random Password Generator</h3>
+                <p>A Random Password Generator is crucial for digital security. By generating unique combinations of characters, it prevents predictable patterns and reused credentials,
+                significantly enhancing security against cyber threats and reducing data breach risks for both individuals and
+                businesses. <br> This app build on React serves the same purpose. Do try it and let hackers dream of cracking your code!</p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <svg id="tailwindIcon" height="20" preserveAspectRatio="xMidYMid" viewBox="0 0 256 154" width="20"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <linearGradient id="a" x1="-2.777778%" x2="100%" y1="32%" y2="67.555556%">
+                            <stop offset="0" stop-color="#2298bd" />
+                            <stop offset="1" stop-color="#0ed7b5" />
+                        </linearGradient>
+                        <path
+                            d="m128 0c-34.1333333 0-55.4666667 17.0666667-64 51.2 12.8-17.0666667 27.7333333-23.4666667 44.8-19.2 9.737481 2.4343704 16.697363 9.4985481 24.401067 17.3184 12.549689 12.7383704 27.07437 27.4816 58.798933 27.4816 34.133333 0 55.466667-17.0666667 64-51.2-12.8 17.0666667-27.733333 23.4666667-44.8 19.2-9.737481-2.4343704-16.697363-9.4985481-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816zm-64 76.8c-34.1333333 0-55.46666667 17.0666667-64 51.2 12.8-17.066667 27.7333333-23.466667 44.8-19.2 9.7374815 2.43437 16.697363 9.498548 24.4010667 17.3184 12.5496889 12.73837 27.0743703 27.4816 58.7989333 27.4816 34.133333 0 55.466667-17.066667 64-51.2-12.8 17.066667-27.733333 23.466667-44.8 19.2-9.737481-2.43437-16.697363-9.498548-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816z"
+                            fill="url(#a)" />
+                    </svg>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                    <i class="fa-brands fa-react fa-xl fa-bounce" style="color: #63E6BE;"></i>
+                </span>
+                <a href="https://kh-password-generator.netlify.app/" id="extLinkAnchor" target="_blank"><img
+                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+            </div>
+        </div>
+        <div class="work">
+            <img src="./imageResources/bgChangerReact.jpeg" alt="BGcolorChangerReact">
+            <div class="layer">
+                <h3>BG Color Changer using React</h3>
+                <p>Its a very simple yet important project built on react where in I explored React's "Props" concept which
+                    enables us to leverage the React Components, pass functions to the child component using props to fetch any variable from the
+                    child component to parent. Also I used Tailwind CSS which makes styling Blazing Fast!
+                </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <svg id="tailwindIcon" height="20" preserveAspectRatio="xMidYMid" viewBox="0 0 256 154" width="20" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <linearGradient id="a" x1="-2.777778%" x2="100%" y1="32%" y2="67.555556%">
+                            <stop offset="0" stop-color="#2298bd" />
+                            <stop offset="1" stop-color="#0ed7b5" />
+                        </linearGradient>
+                        <path
+                            d="m128 0c-34.1333333 0-55.4666667 17.0666667-64 51.2 12.8-17.0666667 27.7333333-23.4666667 44.8-19.2 9.737481 2.4343704 16.697363 9.4985481 24.401067 17.3184 12.549689 12.7383704 27.07437 27.4816 58.798933 27.4816 34.133333 0 55.466667-17.0666667 64-51.2-12.8 17.0666667-27.733333 23.4666667-44.8 19.2-9.737481-2.4343704-16.697363-9.4985481-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816zm-64 76.8c-34.1333333 0-55.46666667 17.0666667-64 51.2 12.8-17.066667 27.7333333-23.466667 44.8-19.2 9.7374815 2.43437 16.697363 9.498548 24.4010667 17.3184 12.5496889 12.73837 27.0743703 27.4816 58.7989333 27.4816 34.133333 0 55.466667-17.066667 64-51.2-12.8 17.066667-27.733333 23.466667-44.8 19.2-9.737481-2.43437-16.697363-9.498548-24.401067-17.3184-12.549689-12.7383704-27.07437-27.4816-58.798933-27.4816z"
+                            fill="url(#a)" />
+                    </svg>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                    <i class="fa-brands fa-react fa-xl fa-bounce" style="color: #63E6BE;"></i>
+                </span>
+                <a href="https://kh-bg-changer.netlify.app/" id="extLinkAnchor" target="_blank"><img
+                        src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
+            </div>
+        </div>
+        <div class="work">
             <img src="imageResources/GuessTheNumberPoster.avif" alt="GuessTheNumberGame">
             <div class="layer">
                 <h3>Guess The Number Game</h3>
                 <p>This is a game in which you have to guess a number in between 1 to 100 for
                     which you will be given 10 chances and also hints for every number whether
                     you have to guess higher or lower number than that!</p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/GuessTheNumberBy_KumarHarsh/" id="extLinkAnchor"
                     target="_blank"><img src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
         </div>
-        <div class="work">
+        <div class="work toggling invisible">
             <img src="imageResources/dhunBrandPic.png" alt="dhunMusicStreamingWebApp" id="dhun">
             <div class="layer">
                 <h3>Dhun music App ~ Feel the music</h3>
@@ -202,11 +284,16 @@
                     play, pause, forward (10s) and backward, along with slider functionality! Means its a fully
                     equiped music streaming app having all the important features.
                 </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/dhun_Feel_the_Music_BY_Kumar_Harsh/" id="extLinkAnchor"
                     target="_blank"><img src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
         </div>
-        <div class="work">
+        <div class="work toggling invisible">
             <img src="imageResources/DrumKitPoster.jpeg" alt="DrumKitGame">
             <div class="layer">
                 <h3>The Drum Kit</h3>
@@ -214,6 +301,11 @@
                     a bass drum, and a snare drum. You can play the drums either by using the mouse or by using the
                     keyboard buttons as mentioned! So, all the drummers out there, Rock&Roll!
                 </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/Drumkit_by_kumar_harsh.github.io/" id="extLinkAnchor"
                     target="_blank"><img src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
@@ -226,6 +318,11 @@
                     app tells your BMI!
                     So, Let's see how fit you are!
                 </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/BMI_calculator_BY_Kumar_Harsh/" id="extLinkAnchor"
                     target="_blank"><img src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
@@ -239,6 +336,11 @@
                     Don't worry, I got you! Here is a simple app of tossing a die for each one of you
                     to see who wins and rides the bike!!
                 </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/dicee_game_by_kumar_harsh/" id="extLinkAnchor" target="_blank"><img
                         src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
@@ -252,6 +354,11 @@
                     app that lets you do the same!
                     Set the background of your beautiful display amongst the given color!
                 </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/Color_ChangerAPP_BY_Kumar_Harsh/" id="extLinkAnchor"
                     target="_blank"><img src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
@@ -263,6 +370,11 @@
                 <p>Its truly said that; "The bad news is that time flies, but the good news is that you are the pilot"
                     Hence get hold of your time with this digital clock I built as a very simple JS project!
                 </p>
+                <span id="techStacks">
+                    <i class="fa-brands fa-html5 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-css3 fa-beat-fade fa-lg"></i>
+                    <i class="fa-brands fa-square-js fa-beat-fade fa-lg" style="color: #63E6BE;"></i>
+                </span>
                 <a href="https://kharsh560.github.io/Digital_Clock_BY_Kumar_Harsh/" id="extLinkAnchor"
                     target="_blank"><img src="imageResources/ExternalLink1.png" alt="extLinkIcon" id="extLink"></a>
             </div>
